Fix spacing using 'first-child' class

--- a/website/thaliawebsite/static/css/style.scss
+++ b/website/thaliawebsite/static/css/style.scss
@@ -2799,12 +2799,6 @@ body {
             display: block;
         }
 
-        .gallery-photo, .member-item, .committee-item, .gallery-album {
-            &.first-child {
-                margin-left: 0;
-            }
-        }
-
         .post {
             & > a {
                 display: block;
